--- a/principal_page/index.html
+++ b/principal_page/index.html
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="loc"> America/Recife </div>
-    <h1>
+
+   <div id="loc"> America/Recife </div>
+
+   <h1>
         A new coder arriving </br>on technology's world!🌍
     </h1>
+    
     <p id="initial_subtext">I'm Lucas, an Computer Science student on Cesar School.</br> I'm ready for challanges and learn even more.</p>
+
+    <a href="about.html" target="_self" class="custom_buttom">
+        <img src="C:\Estudos\CESAR\IC\git\Portfolio_website\portfolio_website\Images\avatar.jpeg" alt="Avatar" class="avatar">
+        <span>About - Lucas Bayma</span>
+    </a>
+
 </body>
 </html>
