--- a/about_page/about.html
+++ b/about_page/about.html
@@ -10,6 +10,6 @@
 
     <div id="loc"> America/Recife </div>
     
-    <img id="profile_photo" src="portfolio_website\about_page\avatar.jpeg" alt="Avatar" class="avatar">
+    <img id="profile_photo" src="portfolio_website/about_page/avatar.jpeg" alt="Avatar" class="avatar">
 </body>
 </html>
