Images relative paths adjust

--- a/principal_page/index.html
+++ b/principal_page/index.html
@@ -16,8 +16,8 @@
     
     <p id="initial_subtext">I'm Lucas, an Computer Science student on Cesar School.</br> I'm ready for challanges and learn even more.</p>
 
-    <a href="portfolio_website/about_page/about.html" target="_self" class="custom_buttom">
-        <img src="portfolio_website/principal_page/avatar.jpeg" alt="Avatar" class="avatar">
+    <a href="../about_page/about.html" target="_self" class="custom_buttom">
+        <img src="avatar.jpeg" alt="Avatar" class="avatar">
         <span>About - Lucas Bayma</span>
     </a>
 
