--- a/principal_page/index.html
+++ b/principal_page/index.html
@@ -9,6 +9,13 @@
 <body>
 
    <div id="loc"> America/Recife </div>
+   
+   <div class="tela-inteira">
+        <div class="menu-central">
+            <a href="../about_page/about.html">About me</a>
+            <a href="#projects">Projects</a>
+        </div>
+    </div>
 
    <h1>
         A new programmer arriving </br>on technology's world!🌍
