Adding menu to webpage

--- a/about_page/about.html
+++ b/about_page/about.html
@@ -9,6 +9,13 @@
 <body>
 
     <div id="loc"> America/Recife </div>
+
+    <div class="tela-inteira">
+        <div class="menu-central">
+            <a href="../principal_page/index.html">Home</a>
+            <a href="#projects">Projects</a>
+        </div>
+    </div>
     
     <img id="profile_photo" src="avatar.jpeg" alt="Avatar" class="avatar">
 </body>
