--- a/principal_page/index.html
+++ b/principal_page/index.html
@@ -12,7 +12,7 @@
    
    <div class="tela-inteira">
         <div class="menu-central">
-            <a href="../about_page/about.html">About me</a>
+            <a href="../about_page/about.html">About</a>
             <a href="#projects">Projects</a>
         </div>
     </div>
