Adding title and subtitle

--- a/about_page/about.html
+++ b/about_page/about.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style_about.css">
 </head>
 <body>
-
     <div id="loc"> America/Recife </div>
 
     <div class="tela-inteira">
@@ -16,7 +15,19 @@
             <a href="#projects">Projects</a>
         </div>
     </div>
-    
-    <img id="profile_photo" src="avatar.jpeg" alt="Avatar" class="avatar">
+
+    <div class="profile">
+        <img id="profile_photo" src="avatar.jpeg" alt="Avatar" class="avatar">
+        <div class="profile_header">
+            <h1 id="profile_title">Lucas Coutinho de Almeida Bayma</h1>
+            <p id="profile_subtitle">Computer Science student at CESAR School</p>
+        </div>
+    </div>
+
+    <div class="profile_text">
+        
+    </div>
+
+
 </body>
 </html>
