Adding profile text

--- a/about_page/about.html
+++ b/about_page/about.html
@@ -25,7 +25,11 @@
     </div>
 
     <div class="profile_text">
+        <p id="introduction">I'm a programmer in training interested in many areas of tech! My main interests </br>
+        are Cybersecurity, Fullstack, Data and Game Development, but still exploring to find where I fit better. </br>
+        I'm currently learning Python, JavaScript, HTML, CSS and Arduino.
         
+        </p>
     </div>
 
 
