Adjusting profile text semantics

--- a/about_page/about.html
+++ b/about_page/about.html
@@ -25,10 +25,9 @@
     </div>
 
     <div class="profile_text">
-        <p id="introduction">I'm a programmer in training interested in many areas of tech! My main interests </br>
-        are Cybersecurity, Fullstack, Data and Game Development, but still exploring to find where I fit better. </br>
-        I'm currently learning Python, JavaScript, HTML, CSS and Arduino.
-        
+        <p id="introduction">I'm a programmer in training always improving my <strong>soft</strong> and <strong>hard</strong> skills interested in many areas of tech,</br> 
+            looking for an opportunity to join a team and help to solve real-world problems. My main interests are </br><strong><em>Cybersecurity, Fullstack, Data and Game Development</em></strong>, but still exploring to find where I fit better.</br>
+            🤓📃Currently learning <strong><em>Python, JavaScript, HTML, CSS and Arduino.</em></strong>
         </p>
     </div>
 
