Adding social buttons

--- a/about_page/about.html
+++ b/about_page/about.html
@@ -24,13 +24,40 @@
         </div>
     </div>
 
+    <div class="profile_git">
+        <a href="https://github.com/Lucascbayma" target="_blank" class="github_buttom">
+        <img src="github.png" alt="Github" class="img_git">
+        <span id="git_text">GitHub</span>
+     </a>
+    </div>
+
+    <div class="profile_linkedin">
+        <a href="https://www.linkedin.com/in/lucascbayma" target="_blank" class="linkedin_buttom">
+        <img src="linkedin.png" alt="linkedin" class="img_linkedin">
+        <span>LinkedIn</span>
+     </a>
+    </div>
+
+    <div class="profile_itchio">
+        <a href="https://lcab10.itch.io/" target="_blank" class="itchio_buttom">
+        <img src="itchio.png" alt="itch.io" class="img_itchio">
+        <span>Itch.io</span>
+     </a>
+    </div>
+
+    <div class="profile_email">
+        <a href="mailto:Lucasbayma31@gmail.com" target="_blank" class="email_buttom">
+        <img src="email.png" alt="email" class="img_email">
+        <span>Email</span>
+     </a>
+    </div>
+
     <div class="profile_text">
         <p id="introduction">I'm a programmer in training always improving my <strong>soft</strong> and <strong>hard</strong> skills interested in many areas of tech,</br> 
             looking for an opportunity to join a team and help to solve real-world problems. My main interests are </br><strong><em>Cybersecurity, Fullstack, Data and Game Development</em></strong>, but still exploring to find where I fit better.</br>
             🤓📃Currently learning <strong><em>Python, JavaScript, HTML, CSS and Arduino.</em></strong>
         </p>
     </div>
-
 
 </body>
 </html>
