Projects menu adjust

--- a/principal_page/index.html
+++ b/principal_page/index.html
@@ -13,7 +13,7 @@
    <div class="tela-inteira">
         <div class="menu-central">
             <a href="../about_page/about.html">About</a>
-            <a href="#projects">Projects</a>
+            <a href="../projects_page/projects.html">Projects</a>
         </div>
     </div>
 
