--- a/about_page/about.html
+++ b/about_page/about.html
@@ -12,7 +12,7 @@
     <div class="tela-inteira">
         <div class="menu-central">
             <a href="../principal_page/index.html">Home</a>
-            <a href="#projects">Projects</a>
+            <a href="../projects_page/projects.html">Projects</a>
         </div>
     </div>
 
