--- a/projects_page/projects.html
+++ b/projects_page/projects.html
@@ -16,11 +16,38 @@
         </div>
     </div>
 
-    <div class="project_corrida">
-        <img src="project_corrida.png" alt="Project - Corrida" class="img_project1">
-        <figcaption>Corrida de Sinais</figcaption>
+    <div class="project1">
+        <video class="video" controls>
+            <source src="project-corrida.mp4" type="video/mp4">
+        </video>
 
+        <div class="project1_text">
+            <h1 class="project1_title">Corrida de Sinais - Signal Race</h1>
+            <p class="project1_subt">The project was developed in the subject "Projetos 1", a very important college course to take</br> 
+                the first steps into the world of innovation.The main theme is Accessibility and Games, in which several groups</br>
+                with disabilities were mentioned. My group and I had the honor of working with the group of hearing-impaired</br> 
+                people, who, unfortunately, have to face a major barrier in the world of physical and digital games. For this, we</br> 
+                developed a playful game with Arduino and RFID, initially designed for children, in which cards are available divided</br> 
+                by difficulties (Easy, Medium, and Hard) and categories (days of the week, numbers, objects, and animals) to facilitate</br> 
+                and increasingly enhance the interaction with people who belong to the mentioned group. During the presentation,</br>
+                we could see how the audience interacted in such a positive way and, from a prototype, already learned a little more</br> 
+                about LIBRAS (Brazilian Sign Language).
+            </p>
+    </div>
+    </div>
 
+    <div class="project2">
+        <img src="print3.png" alt="Onde está meu bigode?" class="img_game">
+
+        <div class="project2_text">
+            <h1 class="project2_title"> Onde está meu bigode? </h1>
+            <p class="project2_subt">The game was developed by me and two other college friends in the subject "Introduction to Computing",</br> 
+                where we were able to explore the no-code game creation tool "Bitsy" and our artistic skills working with pixel art</br>
+                and if-else mechanisms, where a room's door could only be opened when the key was found! The game features several</br> 
+                sprites and easter eggs about our professor from the subject. The goal is to find the main character's mustache, which</br>
+                is a striking characteristic, and in the end, he is faced with an unexpected surprise!</br> 
+            </p>
+    </div>
     </div>
 
 </body>
