--- a/principal_page/index.html
+++ b/principal_page/index.html
@@ -9,6 +9,8 @@
 <body>
 
    <div id="loc"> America/Recife </div>
+
+   <div id="clock"></div>
    
    <div class="tela-inteira">
         <div class="menu-central">
@@ -29,4 +31,5 @@
     </a>
 
 </body>
+<script src="script.js"></script>
 </html>
