--- a/projects_page/projects.html
+++ b/projects_page/projects.html
@@ -9,6 +9,8 @@
 <body>
     <div id="loc"> America/Recife </div>
 
+    <div id="clock"></div>
+
     <div class="tela-inteira">
         <div class="menu-central">
             <a href="../principal_page/index.html">Home</a>
@@ -51,4 +53,5 @@
     </div>
 
 </body>
+<script src="script.js"></script>
 </html>
