--- a/principal_page/index.html
+++ b/principal_page/index.html
@@ -23,7 +23,7 @@
         A new programmer arriving </br>on technology's world!🌍
     </h1>
     
-    <p id="initial_subtext">I'm Lucas, an Computer Science student at Cesar School.</br> I'm ready for challanges and learn even more.</p>
+    <p id="initial_subtext">I'm Lucas, an Computer Science student at CESAR School.</br> I'm ready for challanges and learn even more.</p>
 
     <a href="../about_page/about.html" target="_self" class="custom_buttom">
         <img src="avatar.jpeg" alt="Avatar" class="avatar">
