Update project2 title

--- a/projects_page/projects.html
+++ b/projects_page/projects.html
@@ -42,7 +42,7 @@
         <img src="print3.png" alt="Onde está meu bigode?" class="img_game">
 
         <div class="project2_text">
-            <h1 class="project2_title"> Onde está meu bigode? </h1>
+            <h1 class="project2_title"> Onde está meu bigode? - Where is my mustache?</h1>
             <p class="project2_subt">The game was developed by me and two other college friends in the subject "Introduction to Computing",</br> 
                 where we were able to explore the no-code game creation tool "Bitsy" and our artistic skills working with pixel art</br>
                 and if-else mechanisms, where a room's door could only be opened when the key was found! The game features several</br> 
